# moneymoney

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  clippy.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yaml  release.yaml
docs/: homebrew-formula-template.rb
hooks/: ensure-binary.sh  hooks.json  nudge-skill.sh
skills/moneymoney/: SKILL.md
src/: config.rs  logging.rs  main.rs  mcp.rs  output.rs  statements.rs
src/applescript/: mock.rs  mod.rs
src/commands/: accounts.rs  categories.rs  mod.rs  portfolio.rs  statements.rs  status.rs  transaction_edit.rs  transactions.rs  transfer.rs
src/moneymoney/: errors.rs  mod.rs  resolver.rs  types.rs
