[package]
name = "moneymoney"
version = "0.5.0"
edition = "2024"
rust-version = "1.94"
license = "MIT"
repository = "https://github.com/lukasmalkmus/moneymoney"
description = "Agent-native CLI and MCP server for MoneyMoney"
keywords = ["moneymoney", "banking", "finance", "mcp", "cli"]
categories = ["command-line-utilities", "finance"]

[[bin]]
name = "mm"
path = "src/main.rs"

[dependencies]
# CLI
anyhow = "1"
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
comfy-table = "7"
owo-colors = "4"
thiserror = "2"

# Data
serde = { version = "1", features = ["derive"] }
serde_json = "1"
plist = "1"
toml = "1"
dirs = "6"
iban_validate = "5"
regex = "1"
time = { version = "0.3", features = ["serde", "macros", "parsing", "formatting"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }

# Runtime
tokio = { version = "1", features = ["rt", "macros", "io-std", "process", "signal", "sync"] }

# MCP
rmcp = { version = "1", features = ["server", "macros", "transport-io", "schemars"] }
schemars = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

[dev-dependencies]
pretty_assertions = "1"

[features]
default = []
# Opt-in feature for smoke tests that require a live MoneyMoney install.
live-test = []

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
dbg_macro = "deny"
# Relaxed pedantic subset: field names like `account_number` / `account_type`
# on `Account` are clearer than bare alternatives and won't be renamed.
struct_field_names = "allow"

[profile.release]
lto = true
strip = true
codegen-units = 1
